tests/baselines/reference/negatedFreshTreatedAsClosedSet.errors.txt
tests/cases/conformance/types/negated/negatedFreshTreatedAsClosedSet.ts(10,4): error TS2345: Argument of type '{ x: number; y: number; }' is not assignable to parameter of type 'Distinct<{ x: any; }, { y: any; }>'.
  Type '{ x: number; y: number; }' is not assignable to type '{ y: any; } & not { x: any; }'.
    Type '{ x: number; y: number; }' is not assignable to type 'not { x: any; }'.


==== tests/cases/conformance/types/negated/negatedFreshTreatedAsClosedSet.ts (1 errors) ====
    // from https://github.com/Microsoft/TypeScript/issues/4183
    type Distinct<A, B> = (A | B) & not (A & B);
    declare var o1: {x};
    declare var o2: {y};
    
    declare function f1(x: Distinct<typeof o1, typeof o2>): void;
    
    f1({x: 0});         // OK
    f1({y: 0});         // OK
    f1({x: 0, y: 0});   // Should error
       ~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: number; y: number; }' is not assignable to parameter of type 'Distinct<{ x: any; }, { y: any; }>'.
!!! error TS2345:   Type '{ x: number; y: number; }' is not assignable to type '{ y: any; } & not { x: any; }'.
!!! error TS2345:     Type '{ x: number; y: number; }' is not assignable to type 'not { x: any; }'.
    